Criado parâmetros de datas nas compras das stocks
